--- a/index.html
+++ b/index.html
@@ -8047,8 +8047,104 @@
       </section>
     </header>
     <main>
-      <section>
-        <article></article>
+      <h3 id="trendingTitle"><img src="./assets/imgs/svg/trending.svg" alt="trending_arrow" /> TRENDING ON MEDIUM</h3>
+      <section id="trendingSection">
+        <article class="trendingPost">
+          <div class="trendingPostNumber">01</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image01.jpeg" alt="Profile_img" />
+                <p class="name">Tom Cooper</p>
+              </div>
+              <p class="trendingPostText">Ukraine War, 23 October 2022</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 23</p>
+              <p>5 min read</p>
+            </div>
+          </div>
+        </article>
+        <article class="trendingPost">
+          <div class="trendingPostNumber">02</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image02.png" alt="Profile_img" />
+                <p class="name">Arthur Hayes in Entrepreneur's Handbook</p>
+              </div>
+              <p class="trendingPostText">Comeback</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 26</p>
+              <p>24 min read</p>
+            </div>
+          </div>
+        </article>
+        <article class="trendingPost">
+          <div class="trendingPostNumber">03</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image03.jpeg" alt="Profile_img" />
+                <p class="name">Tom Cooper</p>
+              </div>
+              <p class="trendingPostText">How I Learned to Love My Breasts Even Though One Is A Horcrux For Voldemort</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 26</p>
+              <p>2 min read</p>
+            </div>
+          </div>
+        </article>
+        <article class="trendingPost">
+          <div class="trendingPostNumber">04</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image04.png" alt="Profile_img" />
+                <p class="name">Frank Mastropolo in The Riffk</p>
+              </div>
+              <p class="trendingPostText">The Night Paul McCartney Donned a Disguise at Fillmore East</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 22</p>
+              <p>3 min read</p>
+            </div>
+          </div>
+        </article>
+        <article class="trendingPost">
+          <div class="trendingPostNumber">05</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image05.jpeg" alt="Profile_img" />
+                <p class="name">Frank Andrade in Towards Data Science</p>
+              </div>
+              <p class="trendingPostText">5 Python Projects to Automate Your Life: From Beginner to Advanced</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 13</p>
+              <p>6 min read</p>
+            </div>
+          </div>
+        </article>
+        <article class="trendingPost">
+          <div class="trendingPostNumber">06</div>
+          <div class="trendingPostContainer">
+            <div class="trendingPostContent">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image06.png" alt="Profile_img" />
+                <p class="name">Wesley Smits in JavaScript in Plain English</p>
+              </div>
+              <p class="trendingPostText">How To Make Visual Studio Code Look Amazing</p>
+            </div>
+            <div class="trendingPostDescription">
+              <p>Oct 20</p>
+              <p>7 min read</p>
+            </div>
+          </div>
+        </article>
       </section>
     </main>
   </body>
