related navigation buttons section done (mobile, tablet, desktop)

--- a/index.html
+++ b/index.html
@@ -8146,6 +8146,57 @@
           </div>
         </article>
       </section>
+      <section>
+        <section id="relatedNavSection">
+          <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
+          <nav>
+            <a href="#">Programming</a>
+            <a href="#">Data Science</a>
+            <a href="#">Technology</a>
+            <a href="#">Self Improvement</a>
+            <a href="#">Writing</a>
+            <a href="#">Relationships</a>
+            <a href="#">Machine Learning</a>
+            <a href="#">Productivity</a>
+            <a href="#">Politics</a>
+          </nav>
+          <div>
+            <a href="#">Help</a>
+            <a href="#">Status</a>
+            <a href="#">Writers</a>
+            <a href="#">Blog</a>
+            <a href="#">Careers</a>
+            <a href="#">Privacy</a>
+            <a href="#">Terms</a>
+            <a href="#">About</a>
+            <a href="#">Knowable</a>
+          </div>
+        </section>
+        <article>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image07.jpeg" alt="Profile_img" />
+                <p class="name">Robert Roy Britt</p>
+              </div>
+              <div>
+                <h4>How Old is Old?</h4>
+                <p>What we consider “old” changes dramatically with age, and our perspectives can be predictive of how well we age</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 27 · 5 min read · <span>Aging</span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image08.jpeg" alt="" />
+            </section>
+          </div>
+        </article>
+      </section>
     </main>
   </body>
 </html>
