First related post done (mobile, tablet), need to complete html and desktop version

--- a/index.html
+++ b/index.html
@@ -8172,22 +8172,24 @@
             <a href="#">Knowable</a>
           </div>
         </section>
-        <article>
+        <article id="relatedPostSection">
           <div class="relatedPost">
             <section class="relatedPostDescription">
               <div class="username">
                 <img class="profilePic" src="./assets/imgs/image07.jpeg" alt="Profile_img" />
                 <p class="name">Robert Roy Britt</p>
               </div>
-              <div>
+              <div class="relatedPostContent">
                 <h4>How Old is Old?</h4>
                 <p>What we consider “old” changes dramatically with age, and our perspectives can be predictive of how well we age</p>
                 <div class="relatedPostFooter">
                   <div>
-                    <p>Oct 27 · 5 min read · <span>Aging</span></p>
+                    <p>Oct 27</p>
+                    <p>· 5 min read</p>
+                    <p>· <span class="tag">Aging</span></p>
                     <img src="./assets/imgs/svg/star.svg" alt="star" />
                   </div>
-                  <img src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
                 </div>
               </div>
             </section>
