--- a/index.html
+++ b/index.html
@@ -8197,6 +8197,152 @@
               <img src="./assets/imgs/image08.jpeg" alt="" />
             </section>
           </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image09.jpeg" alt="Profile_img" />
+                <p class="name">Taru Anniina Liikanen</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>Is Taylor Swift Allowed to Speak About Fat?</h4>
+                <p>Can you speak about your trauma if you don't look traumatized?</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 24</p>
+                    <p>· 6 min read</p>
+                    <p>· <span class="tag">health</span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image10.jpeg" alt="" />
+            </section>
+          </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image11.jpeg" alt="Profile_img" />
+                <p class="name">David Rodenas, Ph. D.</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>Don’t Screw Up, You Will Be Found Guilty</h4>
+                <p>Software Engineer, yours is the right to produce high-quality work at all times, also the liability.</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 15</p>
+                    <p>· 5 min read</p>
+                    <p>· <span class="tag">Software Engineering</span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image12.png" alt="" />
+            </section>
+          </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image13.png" alt="Profile_img" />
+                <p class="name">Microsoft Design</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>Leave No Trace</h4>
+                <p>How product designers can break from the status quo and help our planet</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 25</p>
+                    <p>· 11 min read</p>
+                    <p>· <span class="tag">Sustainability </span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image14.png" alt="" />
+            </section>
+          </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image15.jpeg" alt="Profile_img" />
+                <p class="name">Scott H. Young</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>Variability, Not Repetition, is the Key to Mastery</h4>
+                <p>
+                  Bruce Lee is reported to have said, “I fear not the man who has practiced 10,000 kicks once, but the man who has practiced one kick 10,000...
+                </p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 26</p>
+                    <p>· 7 min read</p>
+                    <p>· <span class="tag">Health</span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image16.jpg" alt="" />
+            </section>
+          </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image17.png" alt="Profile_img" />
+                <p class="name">Paul A. DeStefanoin Human Parts</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>What I Overheard as an Escape Room Actor</h4>
+                <p>Lock a group of people in a room and you’ll witness some surprising confessions</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Jan 18, 2020</p>
+                    <p>· 6 min read</p>
+                    <p>· <span class="tag">Experiences </span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image18.jpeg" alt="" />
+            </section>
+          </div>
+          <div class="relatedPost">
+            <section class="relatedPostDescription">
+              <div class="username">
+                <img class="profilePic" src="./assets/imgs/image19.jpeg" alt="Profile_img" />
+                <p class="name">Kim Scott</p>
+              </div>
+              <div class="relatedPostContent">
+                <h4>6 Steps for Setting Measurable Goals to Avoid “Productivity Paranoia”</h4>
+                <p>With more people working in remote and hybrid environments than ever before, company, team and individual goals must be explicit and…</p>
+                <div class="relatedPostFooter">
+                  <div>
+                    <p>Oct 24</p>
+                    <p>· 6 min read</p>
+                    <p>· <span class="tag">Health </span></p>
+                    <img src="./assets/imgs/svg/star.svg" alt="star" />
+                  </div>
+                  <img class="bookmark" src="./assets/imgs/svg/bookmark.svg" alt="bookmark" />
+                </div>
+              </div>
+            </section>
+            <section class="relatedPostImg">
+              <img src="./assets/imgs/image20.jpg" alt="" />
+            </section>
+          </div>
         </article>
       </section>
     </main>
