mobile, tablet and desktop fixed and complete, need to do the 'M' animation

--- a/index.html
+++ b/index.html
@@ -8146,7 +8146,7 @@
           </div>
         </article>
       </section>
-      <section>
+      <section id="desktopLayout">
         <section id="relatedNavSection">
           <h3>DISCOVER MORE OF WHAT MATTERS TO YOU</h3>
           <nav>
@@ -8340,11 +8340,12 @@
               </div>
             </section>
             <section class="relatedPostImg">
-              <img src="./assets/imgs/image20.jpg" alt="" />
+              <img class="imgPreview" src="./assets/imgs/image20.jpg" alt="" />
             </section>
           </div>
         </article>
       </section>
     </main>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
