--- a/index.html
+++ b/index.html
@@ -8061,6 +8061,7 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 23</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>5 min read</p>
             </div>
           </div>
@@ -8077,6 +8078,7 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 26</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>24 min read</p>
             </div>
           </div>
@@ -8093,6 +8095,7 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 26</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>2 min read</p>
             </div>
           </div>
@@ -8109,7 +8112,9 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 22</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>3 min read</p>
+              <img class="trendingPostStar" src="./assets/imgs/svg/star.svg" alt="star" />
             </div>
           </div>
         </article>
@@ -8125,7 +8130,9 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 13</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>6 min read</p>
+              <img class="trendingPostStar" src="./assets/imgs/svg/star.svg" alt="star" />
             </div>
           </div>
         </article>
@@ -8141,7 +8148,9 @@
             </div>
             <div class="trendingPostDescription">
               <p>Oct 20</p>
+              <p class="trendingPostDescriptionDot">·</p>
               <p>7 min read</p>
+              <img class="trendingPostStar" src="./assets/imgs/svg/star.svg" alt="star" />
             </div>
           </div>
         </article>
